# notas-musicais-api

./: README.md  pyproject.toml
notas_musicais_api/: app.py
tests/: conftest.py  test_app.py
